test/files/type-resolver/errors/invalid-input.organic
// Invalid input
// 4 ~ 6 ~ Invalid input name "squiggle" for function "sine".

sine(squiggle: 0)
